--- a/index.html
+++ b/index.html
@@ -1,42 +1,54 @@
-<!DOCTYPE html> 
-<html> 
-    <head> 
-        <meta charset="utf-8"> 
-        <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
+<!DOCTYPE html>
+<html>
 
-        <title>Example Student's HCDE 439 Physical Computing Page!</title> 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
-        <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
+    <title>Jung Eun Choi's HCDE 439 Physical Computing Page!</title>
 
-    </head> 
-    <body> 
+    <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Overpass+Mono&display=swap" rel="stylesheet">
 
+</head>
+
+<body>
+
+    <div class="center">
         <div class="header">
-            <h1>Example Student's HCDE 439 Physical Computing Page!</h1>
+            <h1>Jung Eun Choi's HCDE 439 Physical Computing Page!</h1>
+            <h2>\ (^ o ^) /<br><br>Hello, welcome!</h2>
+            <img src="jungselfportrait.jpg" width="270"></a>
+            <h3>My name is Jung Eun Choi.</h3>
             <p>
-            <img src="red-panda.jpg" width=400></a>
-            </p>
-            <p>
-            My name is Example Student! I'm an HCDE major and excited to learn the following things in this class: how to be a real student, and how to change my name.
+                I'm a HCDE junior at the University of Washington and
+                <br>excited to begin my physical computing journey!
             </p>
         </div>
-        <div class="assignments">
+    </div>
 
-            <div class="assignment">
-              <a href="assignment1.html"><h2>Assignment 1: Blink!</h2>
-                  <img src="red-panda.jpg" width=250></a>
-                <p>
-		Assignment 1 was a panda!
-                </p>
-            </div>
+    <div class="assignments">
+        <hr>
+        <div class="assignment">
+            <a href="assignment1.html">
+                <h2>Assignment 1: Blink!</h2>
+                <img src="idea.jpg" width=250>
+            </a>
+            <p>
+                Assignment 1 was a panda!
+            </p>
+        </div>
 
-            <div class="assignment">
-              <a href="assignment2.html"><h2>Assignment 2: Fade!</h2>
-                  <img src="red-panda.jpg" width=250></a>
-                <p>
-		Assignment 2 was a panda!
-                </p>
-            </div>
-	</div>
-    </body>
+        <div class="assignment">
+            <a href="assignment2.html">
+                <h2>Assignment 2: Fade!</h2>
+                <img src="idea.jpg" width=250>
+            </a>
+            <p>
+                Assignment 2 was a panda!
+            </p>
+        </div>
+    </div>
+</body>
+
 </html>
