--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img src="idea.jpg" width=250>
             </a>
             <p>
-                Assignment 1 was a panda!
+                Assignment 1 was an idea!
             </p>
         </div>
 
@@ -45,7 +45,7 @@
                 <img src="idea.jpg" width=250>
             </a>
             <p>
-                Assignment 2 was a panda!
+                Assignment 2 was an idea!
             </p>
         </div>
     </div>
