--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -29,13 +28,14 @@
 
     <div class="assignments">
         <hr>
+        <p><a href="https://github.com/jechoi29/jechoi29.github.io">link to my github</a></p>
         <div class="assignment">
-            <a href="assignment1.html">
+            <a href="a1_blink.html">
                 <h2>Assignment 1: Blink!</h2>
-                <img src="idea.jpg" width=250>
+                <img src="/a1_blink_files/blink_coverimg.GIF" width=250>
             </a>
             <p>
-                Assignment 1 was an idea!
+                Assignment 1 was making LEDs blink independently!
             </p>
         </div>
 
@@ -48,6 +48,17 @@
                 Assignment 2 was an idea!
             </p>
         </div>
+
+        <div class="assignment">
+            <a href="assignment3.html">
+                <h2>Assignment 3: Fade!</h2>
+                <img src="idea.jpg" width=250>
+            </a>
+            <p>
+                Assignment 3 was an idea!
+            </p>
+        </div>
+
     </div>
 </body>
 
