--- a/a1_blink.html
+++ b/a1_blink.html
@@ -182,6 +182,10 @@ void loop() {
   delay(250);               
 }
                 </pre>
+                <figure>
+                    <img src="/a1_blink_files/blink_coverimg.GIF" width=450>
+                    <figcaption>Figure 4: gif of how my LEDs blink</figcaption>
+                </figure>
             </div>
         </div>
     </div>
