--- a/a1_blink.html
+++ b/a1_blink.html
@@ -60,7 +60,7 @@
                     Write firmware for the circuit that makes the LEDs blink in a pattern
                     and add comments to explain what the code does.
                     <br><br>
-                    <strong>What I did:</strong> I made 4 LEDs (two blue and red colored LEDs) blink
+                    <strong>What I did:</strong> I made 4 LEDs (two blue and white colored LEDs) blink
                     in a pattern that I wanted to try.
                     <br><br>
                     Before I started inserting the electronic components into the breadboard,
