--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="jungselfportrait.jpg" width="270"></a>
             <h3>My name is Jung Eun Choi.</h3>
             <p>
-                I'm a HCDE junior at the University of Washington and
+                I'm an HCDE junior at the University of Washington and
                 <br>excited to begin my physical computing journey!
             </p>
         </div>
@@ -40,12 +40,13 @@
         </div>
 
         <div class="assignment">
-            <a href="assignment2.html">
+            <a href="a2_fade.html">
                 <h2>Assignment 2: Fade!</h2>
-                <img src="idea.jpg" width=250>
+                <img src="/a2_fade_files/fade.gif" width=250>
             </a>
             <p>
-                Assignment 2 was an idea!
+                Assignment 2 was incorporating a fade effect on the lights blinking and using a button to activate the
+                lights!
             </p>
         </div>
 
@@ -56,6 +57,16 @@
             </a>
             <p>
                 Assignment 3 was an idea!
+            </p>
+        </div>
+
+        <div class="assignment">
+            <a href="assignment4.html">
+                <h2>Assignment 4: Idea!</h2>
+                <img src="idea.jpg" width=250>
+            </a>
+            <p>
+                Assignment 4 was an idea!
             </p>
         </div>
 
