--- a/a2_fade.html
+++ b/a2_fade.html
@@ -165,7 +165,7 @@ void loop() {
 }
                 </pre>
                 <figure>
-                    <img src="/a2_fade_files/fade.gif" width=450>
+                    <img src="/a2_fade_files/fade.GIF" width=450>
                     <figcaption>Figure 4: gif of how my LEDs blink</figcaption>
                 </figure>
             </div>
