--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="assignment">
             <a href="a2_fade.html">
                 <h2>Assignment 2: Fade!</h2>
-                <img src="/a2_fade_files/fade.GIF" width=250>
+                <img src="/a2_fade_files/fade_gif.GIF" width=250>
             </a>
             <p>
                 Assignment 2 was incorporating a fade effect on the lights blinking and using a button to activate the
