--- a/a2_fade.html
+++ b/a2_fade.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <p><a href="https://jechoi29.github.io/">to my homepage</a></p>
+    <p><a href="index.html">to my homepage</a></p>
     <div class="center">
         <div class="header">
             <h1>Assignment 2: Fade!</h1>
