--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
         </div>
 
         <div class="assignment">
-            <a href="assignment3.html">
-                <h2>Assignment 3: Fade!</h2>
-                <img src="idea.jpg" width=250>
+            <a href="a3_inputoutput.html">
+                <h2>Assignment 3: Input Output!</h2>
+                <img src="/a3_inputoutput_files/inputoutput.GIF" width=250>
             </a>
             <p>
-                Assignment 3 was an idea!
+                Assignment 3 was using a sensor to change the state of the LED!
             </p>
         </div>
 
         <div class="assignment">
-            <a href="assignment4.html">
+            <a href="assignment.html">
                 <h2>Assignment 4: Idea!</h2>
                 <img src="idea.jpg" width=250>
             </a>
