--- a/a4_high(er)voltage_transistors.html
+++ b/a4_high(er)voltage_transistors.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
-    <title>Assignment 3: Input Output!</title>
+    <title>Assignment 4: Higher Voltage and Transistors!</title>
 
     <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
 
