--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         </div>
 
         <div class="assignment">
-            <a href="assignment.html">
+            <a href="a5_talkingtotheweb.html">
                 <h2>Assignment 5: <br>Idea!</h2>
-                <img src="idea.jpg" width=250>
+                <img src="a5_talkingtotheweb_files/talkingtotheweb.GIF" width=250>
             </a>
             <p>
-                Assignment 5 was an idea!
+                Assignment 5 was creating a webpage with p5.js that interacts with data that’s transferred from the arduino over serial!
             </p>
         </div>
 
