--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <img src="a5_talkingtotheweb_files/talkingtotheweb.GIF" width=250>
             </a>
             <p>
-                Assignment 5 was creating a webpage with p5.js that interacts with data that’s transferred from the arduino over serial!
+                Assignment 5 was creating an interactive webpage with p5.js and arduino! Data transfers over serial!
             </p>
         </div>
 
@@ -88,16 +88,6 @@
             </a>
             <p>
                 Assignment 6 was an idea!
-            </p>
-        </div>
-        
-        <div class="assignment">
-            <a href="assignment.html">
-                <h2>Assignment 7: <br>Idea!</h2>
-                <img src="idea.jpg" width=250>
-            </a>
-            <p>
-                Assignment 7 was an idea!
             </p>
         </div>
 
@@ -111,7 +101,5 @@
             </p>
         </div>
     </div>
-    
 </body>
-
 </html>
