Add title to A5

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="assignment">
             <a href="a5_talkingtotheweb.html">
-                <h2>Assignment 5: <br>Idea!</h2>
+                <h2>Assignment 5: <br>Talking to the Web!</h2>
                 <img src="a5_talkingtotheweb_files/talkingtotheweb.GIF" width=250>
             </a>
             <p>
