--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
         </div>
 
         <div class="assignment">
-            <a href="assignment.html">
-                <h2>Assignment 6: <br>Idea!</h2>
-                <img src="idea.jpg" width=250>
+            <a href="a6_thewebtalksback.html">
+                <h2>Assignment 6: <br>The Web Talks Back!</h2>
+                <img src="a6_thewebtalksback_files/thewebtalksback.GIF" width=250>
             </a>
             <p>
-                Assignment 6 was an idea!
+                Assignment 6 was building upon Assignment 5. Make the web control the arduino, and vice versa!
             </p>
         </div>
 
