Add final project

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="assignment">
-            <a href="assignment.html">
+            <a href="finalproject.html">
                 <h2>Final Project: Humidity Detector!</h2>
                 <img src="idea.jpg" width=250>
             </a>
