Add thumbnail image

--- a/finalproject.html
+++ b/finalproject.html
@@ -48,7 +48,7 @@
         <div class="leftline">
           <figure>
             <img
-              src="/finalproject_files/humiditydetector.jpg"
+              src="/finalproject_files/humiditydetector.JPG"
               width="450"
             />
             <figcaption>Figure 1: humidity detector prototype preview</figcaption>
