--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="assignment">
             <a href="finalproject.html">
                 <h2>Final Project: Humidity Detector!</h2>
-                <img src="idea.jpg" width=250>
+                <img src="finalproject_files/humiditydetector.JPG" width=250>
             </a>
             <p>
                 Detect the humidity levels in a room! Signal whether the room's humidity is at its ideal state.  
